--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.435.0",
+    "plotly.js": "^2.35.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-otp-input": "^3.1.1",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
